--- a/srv/package.json
+++ b/srv/package.json
@@ -4,10 +4,14 @@
     "version": "1.0.0",
     "dependencies": {
         "@sap/cds": "^3.34.2",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "hdb": "^0.17.0",
+        "@sap/hana-client": "^2.4.196",
+        "validator":"13.1.1"
     },
     "engines": {
-        "node": "^10 || ^12"
+        "node": "10.19.0",
+        "npm": "6.11.3"
     },
     "devDependencies": {},
     "scripts": {
