--- a/rbei_cap_njs_reuse/package.json
+++ b/rbei_cap_njs_reuse/package.json
@@ -7,7 +7,8 @@
 	"passport":"latest",
 	"body-parser":"latest",
 	"multer":"latest",
-	"convert-excel-to-json":"latest"
+	"convert-excel-to-json":"latest",
+	"cors":"latest"
   },
   "description": "my description",
   "devDependencies": {
