--- a/rbei_ui5_reuse_rep/webapp/manifest.json
+++ b/rbei_ui5_reuse_rep/webapp/manifest.json
@@ -13,16 +13,25 @@
 			"id": "servicecatalog.connectivityComponentForManifest",
 			"version": "0.0.0"
 		},
-	"dataSources": {
-		 "repo": {
-		  "uri": "/srv_test/repo/",
-		  "type": "OData",
-		  "settings": {
-			  "localUri": "localService/metadata.xml",
-			  "odataVersion": "4.0"
+		"dataSources": {
+			"repo": {
+				"uri": "/srv_test/repo/",
+				"type": "OData",
+				"settings": {
+					"localUri": "localService/metadata.xml",
+					"odataVersion": "4.0"
+				}
+			},
+				"master": {
+				"uri": "/srv_test/master/",
+				"type": "OData",
+				"settings": {
+					"localUri": "localService/metadata.xml",
+					"odataVersion": "4.0"
 				}
 			}
-		}
+
+	}
 	},
 	"sap.ui": {
 		"technology": "UI5",
@@ -67,6 +76,11 @@
 					"bundleName": "RBEI_UI5.rbei_ui5_reuse_rep.i18n.i18n"
 				}
 			},
+			"navigation": {
+				"type": "sap.ui.model.json.JSONModel",
+				"settings": {},
+				"uri": "model/Navigation.json"
+			},
 			"odata_model": {
 				"type": "sap.ui.model.odata.v4.ODataModel",
 				"settings": {
@@ -75,15 +89,23 @@
 					"groupId": "$direct"
 				},
 				"dataSource": "repo",
-				"preload": true
+				"preload": false
+			},
+			"odata_model2": {
+				"type": "sap.ui.model.odata.v4.ODataModel",
+				"settings": {
+					"operationMode": "Server",
+					"synchronizationMode": "None",
+					"groupId": "$direct"
+				},
+				"dataSource": "master",
+				"preload": false
 			}
 		},
 		"resources": {
-			"css": [
-				{
-					"uri": "css/style.css"
-				}
-			]
+			"css": [{
+				"uri": "css/style.css"
+			}]
 		},
 		"routing": {
 			"config": {
@@ -95,22 +117,19 @@
 				"controlId": "app",
 				"clearControlAggregation": false
 			},
-			"routes": [
-				{
-					"name": "RouteView1",
-					"pattern": "RouteView1",
-					"target": [
-						"TargetView1"
-					]
-				},
-				{
-					"name": "View1",
-					"pattern": "RouteView1",
-					"target": [
-						"View2"
-					]
-				}
-			],
+			"routes": [{
+				"name": "RouteView1",
+				"pattern": "RouteView1",
+				"target": [
+					"TargetView1"
+				]
+			}, {
+				"name": "View1",
+				"pattern": "RouteView1",
+				"target": [
+					"View2"
+				]
+			}],
 			"targets": {
 				"TargetView1": {
 					"viewType": "XML",
