--- a/mta.yaml
+++ b/mta.yaml
@@ -14,7 +14,6 @@ modules:
           url: '${default-url}'
     requires:
       - name: rbei_cap_njs_reuse_rep-db-hdi-container
-           
   - name: rbei_cap_njs_reuse_rep-db
     type: hdb
     path: db
@@ -32,26 +31,29 @@ modules:
           url: '${default-url}'
     requires:
       - name: rbei_cap_njs_reuse_rep-db-hdi-container
+    parameters:
+      disk-quota: 512M
+      memory: 256M
   - name: rbei_ui5_reuse_rep
     type: html5
     path: rbei_ui5_reuse_rep
     parameters:
-       disk-quota: 512M
-       memory: 256M
+      disk-quota: 512M
+      memory: 256M
     build-parameters:
-       builder: grunt
+      builder: grunt
     requires:
-     - name: uaa_rbei_cap_njs_reuse_rep
-     - name: dest_rbei_cap_njs_reuse_rep
-     - name: rbei_cap_njs_reuse_api
-       group: destinations
-       properties:
+      - name: uaa_rbei_cap_njs_reuse_rep
+      - name: dest_rbei_cap_njs_reuse_rep
+      - name: rbei_cap_njs_reuse_api
+        group: destinations
+        properties:
           forwardAuthToken: true
           name: rbei_cap_njs_reuse_api
           url: '~{url}'
-     - name: srv_api
-       group: destinations
-       properties:
+      - name: srv_api
+        group: destinations
+        properties:
           forwardAuthToken: true
           name: srv_api
           url: '~{url}'
@@ -62,17 +64,14 @@ resources:
     type: com.sap.xs.hdi-container
     properties:
       hdi-container-name: '${service-name}'
-      
   - name: uaa_rbei_cap_njs_reuse_rep
     parameters:
-       path: ./xs-security.json
-       service-plan: application
-       service: xsuaa
+      path: ./xs-security.json
+      service-plan: application
+      service: xsuaa
     type: org.cloudfoundry.managed-service
-
-
   - name: dest_rbei_cap_njs_reuse_rep
     parameters:
-       service-plan: lite
-       service: destination
+      service-plan: lite
+      service: destination
     type: org.cloudfoundry.managed-service
