CHanges from UI end for week 4 of September

--- a/rbei_ui5_reuse_rep/webapp/manifest.json
+++ b/rbei_ui5_reuse_rep/webapp/manifest.json
@@ -129,6 +129,13 @@
 				"target": [
 					"View2"
 				]
+			},
+			{
+				"name": "ObjectsDetailsPage",
+				"pattern": "ObjectsDetailsPage",
+				"target": [
+					"ObjectsDetailsPage"
+				]
 			}],
 			"targets": {
 				"TargetView1": {
@@ -141,6 +148,11 @@
 				"View2": {
 					"viewType": "XML",
 					"viewName": "View2"
+				},
+			
+				"ObjectsDetailsPage" : {
+					"viewType": "XML",
+					"viewName": "ObjectsDetailsPage"
 				}
 			}
 		}
