--- a/rbei_cap_njs_reuse/package.json
+++ b/rbei_cap_njs_reuse/package.json
@@ -8,7 +8,8 @@
     "body-parser": "latest",
     "multer": "latest",
     "convert-excel-to-json": "latest",
-    "cors": "latest"
+    "cors": "latest",
+    "nodemailer":"latest"
   },
   "description": "my description",
   "devDependencies": {
