--- a/rbei_ui5_reuse_rep/webapp/manifest.json
+++ b/rbei_ui5_reuse_rep/webapp/manifest.json
@@ -55,10 +55,10 @@
 	"sap.ui5": {
 		"flexEnabled": false,
 		"rootView": {
-			"viewName": "RBEI_UI5.rbei_ui5_reuse_rep.view.App",
+			"viewName": "RBEI_UI5.rbei_ui5_reuse_rep.view.View1",
 			"type": "XML",
 			"async": true,
-			"id": "App"
+			"id": "View1"
 		},
 		"dependencies": {
 			"minUI5Version": "1.65.6",
@@ -111,9 +111,11 @@
 			}
 		},
 		"resources": {
-			"css": [{
-				"uri": "css/style.css"
-			}]
+			"css": [
+				{
+					"uri": "css/style.css"
+				}
+			]
 		},
 		"routing": {
 			"config": {
@@ -121,26 +123,57 @@
 				"viewType": "XML",
 				"async": true,
 				"viewPath": "RBEI_UI5.rbei_ui5_reuse_rep.view",
-				"controlId": "flexibleColumnLayout",
+				"controlId": "app",
 				"controlAggregation": "pages",
 				"clearControlAggregation": false,
-				"viewLevel": 1
+				"bypassed": {
+					"target": []
+				}
 			},
-			"routes": [{
-				"name": "ToolPage",
-				"pattern": ":layout:",
-				"target": ["TargetView1",
-				"ObjectsDetailsPage"]
-			}, {
-				"name": "View2",
-				"pattern": "RouteView1",
-				"target": ["View2"]
-			}, {
-				"pattern": "ObjectsDetailsPage/{product}/{layout}",
-				"name": "ObjectsDetailsPage",
-				"target": ["TargetView1",
-				"ObjectsDetailsPage"]
-			}],
+			"routes": [
+				{
+					"name": "TargetView1",
+					"pattern": "TargetView1",
+					"target": [
+						"TargetView1",
+						"ObjectsDetailsPage"
+					]
+				},
+				{
+					"name": "View2",
+					"pattern": "RouteView1",
+					"target": [
+						"View2"
+					]
+				},
+				{
+					"pattern": "ObjectsDetailsPage/{product}/{layout}",
+					"name": "ObjectsDetailsPage",
+					"target": [
+						"TargetView1",
+						"ObjectsDetailsPage"
+					]
+				},
+				{
+					"name": "App",
+					"pattern": "App",
+					"titleTarget": "",
+					"greedy": false,
+					"target": [
+						"App"
+					]
+				},
+				{
+					"name": "View1",
+					"pattern": "View1",
+					"titleTarget": "",
+					"greedy": false,
+					"target": [
+						"TargetView1",
+						"ObjectsDetailsPage"
+					]
+				}
+			],
 			"targets": {
 				"TargetView1": {
 					"viewName": "ToolPage",
@@ -153,6 +186,18 @@
 				"ObjectsDetailsPage": {
 					"viewName": "ObjectsDetailsPage",
 					"controlAggregation": "midColumnPages"
+				},
+				"View1": {
+					"viewType": "XML",
+					"transition": "slide",
+					"clearControlAggregation": false,
+					"viewName": "View1"
+				},
+				"App": {
+					"viewType": "XML",
+					"transition": "slide",
+					"clearControlAggregation": false,
+					"viewName": "App"
 				}
 			}
 		}
