--- a/db/package.json
+++ b/db/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "deploy",
-  "dependencies": {
-    "@sap/hdi-deploy": "^3"
-  },
-  "scripts": {
-    "postinstall": "node .build.js",
-    "start": "node node_modules/@sap/hdi-deploy/deploy.js"
-  }
+    "name": "deploy",
+    "dependencies": {
+        "@sap/hdi-deploy": "^3"
+    },
+    "engines": {
+        "node": "^10 || ^12"
+    },
+    "scripts": {
+        "postinstall": "node .build.js",
+        "start": "node node_modules/@sap/hdi-deploy/deploy.js --auto-undeploy"
+    }
 }
