--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dependencies": {
         "@sap/cds": "^3.34.2",
         "express": "^4.17.1",
-        "@sap/hana-client": "^2.5.86"
+        "@sap/hana-client": "^2.4.196"
     },
     "engines": {
         "node": "^10 || ^12"
@@ -17,25 +17,25 @@
         "deploy": "cds deploy",
         "start": "cds run"
     },
-    "files": [
-        "srv",
-        "db"
-    ],
     "cds": {
         "hana": {
             "deploy-format": "hdbtable"
-        },
-        "odata": {
-            "version": "v4"
         },
         "requires": {
             "db": {
                 "kind": "hana",
                 "model": [
-                    "srv",
-                    "db"
+                    "db",
+                    "srv"
                 ]
             }
+        },
+        "odata": {
+            "version": "v4"
         }
-    }
+    },
+    "files": [
+        "db",
+        "srv"
+    ]
 }
