--- a/rbei_ui5_reuse_rep/package.json
+++ b/rbei_ui5_reuse_rep/package.json
@@ -2,12 +2,8 @@
   "name": "rbei_ui5_reuse_rep",
   "version": "0.0.1",
   "description": "",
-  "devDependencies": {
-    "@sap/grunt-sapui5-bestpractice-build": "1.4.2",
-    "@sap/grunt-sapui5-bestpractice-test": "2.0.1"
-  },
   "dependencies": {
-    "@sap/approuter": "6.8.0"
+    "@sap/approuter": "latest"
   },
   "scripts": {
     "start": "node node_modules/@sap/approuter/approuter.js",
