--- a/srv/package.json
+++ b/srv/package.json
@@ -6,8 +6,7 @@
         "@sap/cds": "^3.34.2",
         "express": "^4.17.1",
         "hdb": "^0.17.0",
-        "@sap/hana-client": "^2.4.196",
-        "validator": "13.1.1"
+        "@sap/hana-client": "^2.4.196"
     },
     "engines": {
         "node": "^10 || ^12",
